--- a/SyncDreamer_colab.ipynb
+++ b/SyncDreamer_colab.ipynb
@@ -23,12 +23,22 @@
         "\n",
         "!apt -y install -qq aria2\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/camenduru/SyncDreamer/resolve/main/syncdreamer-pretrain.ckpt -d /content/SyncDreamer/ckpt -o syncdreamer-pretrain.ckpt\n",
-        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/camenduru/SyncDreamer/resolve/main/ViT-L-14.ckpt -d /content/SyncDreamer/ckpt -o ViT-L-14.ckpt\n",
+        "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/camenduru/SyncDreamer/resolve/main/ViT-L-14.pt -d /content/SyncDreamer/ckpt -o ViT-L-14.pt\n",
         "\n",
         "!pip install -q pytorch_lightning tqdm PIL kornia webdataset omegaconf einops pymcubes carvekit\n",
         "!pip install -q open3d nerfacc git+https://github.com/openai/CLIP.git\n",
         "# !pip install -q git+https://github.com/NVlabs/tiny-cuda-nn/#subdirectory=bindings/torch\n",
         "!pip install -q https://huggingface.co/camenduru/CoDeF/resolve/main/tinycudann-1.7-cp310-cp310-linux_x86_64.whl"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!wget https://huggingface.co/spaces/One-2-3-45/One-2-3-45/resolve/main/demo_examples/00_zero123_lysol.png\n",
+        "!python foreground_segment.py --input /content/SyncDreamer/00_zero123_lysol.png --output /content/SyncDreamer/00_zero123_lysol_out.png"
       ]
     }
   ],
