--- a/SyncDreamer_colab.ipynb
+++ b/SyncDreamer_colab.ipynb
@@ -40,6 +40,21 @@
         "!wget https://huggingface.co/spaces/One-2-3-45/One-2-3-45/resolve/main/demo_examples/00_zero123_lysol.png\n",
         "!python foreground_segment.py --input /content/SyncDreamer/00_zero123_lysol.png --output /content/SyncDreamer/00_zero123_lysol_out.png"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!python generate.py --ckpt /content/SyncDreamer/ckpt/syncdreamer-pretrain.ckpt \\\n",
+        "                   --input /content/SyncDreamer/00_zero123_lysol_out.png \\\n",
+        "                   --output /content/SyncDreamer \\\n",
+        "                   --sample_num 4 \\\n",
+        "                   --cfg_scale 2.0 \\\n",
+        "                   --elevation 30 \\\n",
+        "                   --crop_size 200"
+      ]
     }
   ],
   "metadata": {
