--- a/SyncDreamer_colab.ipynb
+++ b/SyncDreamer_colab.ipynb
@@ -40,15 +40,8 @@
       "outputs": [],
       "source": [
         "!wget https://huggingface.co/spaces/One-2-3-45/One-2-3-45/resolve/main/demo_examples/00_zero123_lysol.png\n",
-        "!python foreground_segment.py --input /content/SyncDreamer/00_zero123_lysol.png --output /content/SyncDreamer/00_zero123_lysol_out.png"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
+        "!python foreground_segment.py --input /content/SyncDreamer/00_zero123_lysol.png --output /content/SyncDreamer/00_zero123_lysol_out.png\n",
+        "\n",
         "!python generate.py --ckpt /content/SyncDreamer/ckpt/syncdreamer-pretrain.ckpt \\\n",
         "                   --input /content/SyncDreamer/00_zero123_lysol_out.png \\\n",
         "                   --output /content/SyncDreamer \\\n",
