--- a/SyncDreamer_gradio_colab.ipynb
+++ b/SyncDreamer_gradio_colab.ipynb
@@ -37,7 +37,7 @@
         "\n",
         "!aria2c --console-log-level=error -c -x 16 -s 16 -k 1M https://huggingface.co/camenduru/SyncDreamer/resolve/main/camera-16.pkl -d /content/SyncDreamer-hf/meta_info -o camera-16.pkl\n",
         "\n",
-        "!pip install -q pytorch_lightning transformers taming-transformers-rom1504 kornia webdataset gradio\n",
+        "!pip install -q diffusers pytorch_lightning transformers taming-transformers-rom1504 kornia webdataset gradio\n",
         "!pip install -q omegaconf einops pymcubes carvekit-colab open3d trimesh nerfacc fire segment_anything\n",
         "!pip install -q git+https://github.com/openai/CLIP.git\n",
         "\n",
