--- a/SyncDreamer_colab.ipynb
+++ b/SyncDreamer_colab.ipynb
@@ -27,7 +27,7 @@
         "\n",
         "!pip install -q torch==2.0.1+cu118 torchvision==0.15.2+cu118 torchaudio==2.0.2+cu118 torchtext==0.15.2 torchdata==0.6.1 --extra-index-url https://download.pytorch.org/whl/cu118 -U\n",
         "\n",
-        "!pip install -q omegaconf pytorch_lightning kornia einops transformers tqdm webdataset pymcubes carvekit taming-transformers-rom1504\n",
+        "!pip install -q diffusers omegaconf pytorch_lightning kornia einops transformers tqdm webdataset pymcubes carvekit taming-transformers-rom1504\n",
         "!pip install -q open3d nerfacc git+https://github.com/openai/CLIP.git\n",
         "# !pip install -q git+https://github.com/NVlabs/tiny-cuda-nn/#subdirectory=bindings/torch\n",
         "!pip install -q https://huggingface.co/camenduru/CoDeF/resolve/main/tinycudann-1.7-cp310-cp310-linux_x86_64.whl"
