--- a/SyncDreamer_colab.ipynb
+++ b/SyncDreamer_colab.ipynb
@@ -30,7 +30,7 @@
         "!pip install -q omegaconf pytorch_lightning kornia einops transformers tqdm webdataset pymcubes carvekit taming-transformers-rom1504\n",
         "!pip install -q open3d nerfacc git+https://github.com/openai/CLIP.git\n",
         "# !pip install -q git+https://github.com/NVlabs/tiny-cuda-nn/#subdirectory=bindings/torch\n",
-        "!pip install -q https://huggingface.co/camenduru/CoDeF/resolve/main/tinycudann-1.7-cp310-cp310-linux_x86_64.whl"
+        "!pip install -q https://github.com/camenduru/wheels/releases/download/colab/tinycudann-1.7-cp310-cp310-linux_x86_64.whl"
       ]
     },
     {
